# AlphaLoop

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run.sh  setup-windows.ps1
.github/workflows/: python-ci.yml
alphaloop/: __init__.py  agent.py  config.py  heartbeat.py  logger.py  mcp.py  mcp_oauth.py  runner.py  sandbox.py  skills.py  tui.py
alphaloop/channels/: __init__.py  base.py  manager.py  telegram.py  whatsapp.py
tests/: test_agent.py  test_mcp.py  test_mcp_oauth.py  test_tui.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/docs/: index.html
web/mcp/: index.html
web/src/: AlphaLoopDocs.jsx  AlphaLoopLanding.jsx  AlphaLoopMcp.jsx  App.jsx  docs-main.jsx  index.css  mcp-main.jsx
