[project]
name = "alphaloop"
version = "0.1.0"
description = "A 24/7 deep agent with heartbeat, built on deepagents + Ollama"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.4.10",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=1.1.2",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain-core>=1.2.18",
    "langchain>=1.2.11",
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.28.0",
    "textual>=4.0.0",
    "langchain-mcp-adapters>=0.2.1",
    "duckduckgo-search>=8.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
]

[project.scripts]
alphaloop = "main:cli"

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["alphaloop*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
